[package]
name = "sram23x"
version = "0.2.0"
authors = ["Alexander Williams, On-Prem <license@on-premises.com>"]
repository = "https://github.com/aw/sram23x"
edition = "2018"
license = "MIT"
description = "Platform-agnostic Rust driver for the 23xx series serial SPI SRAMs."
readme = "README.md"
keywords = ["sram", "spi", "driver", "embedded-hal", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/aw/sram23x"
documentation = "https://docs.rs/sram23x"
include = [
    "src/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]

[dependencies]
embedded-hal = "0.2"
bit_field = "0.10.0"

[dev-dependencies]
embedded-hal-mock = "0.7"
